versions/v2.14/modules/es/pages/cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/load-balancer-and-ingress-controller.adoc
= Configuración del Balanceador de Carga y Controlador de Ingress dentro de {rancher-product-name}
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, de, es, fr, ja, pt, zh]
endif::[]
:revdate: 2026-03-23
:page-revdate: {revdate}
:community-path: instrucciones/nuevos-usuarios/guías-de-recursos-kubernetes/configuración-del-balanceador-de-carga-y-controlador-de-ingress/index.adoc 
:product-path: cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/balanceador-de-carga-y-controlador-de-ingress.adoc
:description: Aprende cómo puedes configurar balanceadores de carga y controladores de ingress para redirigir solicitudes de servicio dentro de Rancher, y conoce las limitaciones de los balanceadores de carga
ifeval::["{build-type}" != "community"]
:xref-l4-l7-lb: xref:cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/balanceador-de-carga-capa-4-y-capa-7.adoc
:xref-add-ingresses: xref:cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/add-ingresses.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-l4-l7-lb: xref:instrucciones/nuevos-usuarios/guías-de-recursos-kubernetes/configuración-del-balanceador-de-carga-y-controlador-de-ingress/balanceador-de-carga-capa-4-y-capa-7.adoc
:xref-add-ingresses: xref:guías-prácticas/nuevos-usuarios/recursos-kubernetes-configuración/balanceador-de-carga-y-controlador-de-ingress/añadir-ingress.adoc
endif::[]

Dentro de Rancher, puedes configurar balanceadores de carga y controladores de ingress para redirigir solicitudes de servicio.

[#_load_balancers]
== Balanceadores de Carga

Después de lanzar una aplicación, la app solo está disponible dentro del clúster. No se puede acceder desde fuera del clúster.

Si deseas que tus aplicaciones sean accesibles externamente, debes añadir un balanceador de carga o un ingress a tu clúster. Los balanceadores de carga crean una puerta de enlace para que las conexiones externas accedan a tu clúster, siempre que el usuario conozca la dirección IP del balanceador de carga y el número de puerto de la aplicación.

Rancher soporta dos tipos de balanceadores de carga:

* xref:./layer-4-and-layer-7-load-balancing.adoc#_layer_4_load_balancer[Balanceadores de Carga de Capa-4]
* xref:./layer-4-and-layer-7-load-balancing.adoc#_layer_7_load_balancer[Balanceadores de Carga de Capa-7]

Para más información, consulta {xref-l4-l7-lb}[balanceadores de carga].

[#_load_balancer_limitations]
=== Limitaciones del Balanceador de Carga

Los Balanceadores de Carga tienen un par de limitaciones de las que deberías estar al tanto:

* Los Balanceadores de Carga solo pueden manejar una dirección IP por servicio, lo que significa que si ejecutas múltiples servicios en tu clúster, debes tener un balanceador de carga para cada servicio. Ejecutar múltiples balanceadores de carga puede ser costoso.
* Si deseas utilizar un balanceador de carga con un clúster de Kubernetes alojado (es decir, clústeres alojados en GKE, EKS o AKS), el balanceador de carga debe estar funcionando dentro de la infraestructura de ese proveedor de nube. Por favor, revisa las tablas de compatibilidad respecto al soporte para balanceadores de carga según cómo hayas provisionado tus clústeres:
* xref:./layer-4-and-layer-7-load-balancing.adoc#_support_for_layer_4_load_balancing[Soporte para el balanceo de carga de Capa-4]
* xref:./layer-4-and-layer-7-load-balancing.adoc#_support_for_layer_7_load_balancing[Soporte para el balanceo de carga de Capa-7]

[#_ingress]
== Ingress

Como se mencionó en las limitaciones anteriores, las desventajas de usar un balanceador de carga son:

* Los balanceadores de carga solo pueden manejar una dirección IP por servicio.
* Si ejecutas múltiples servicios en tu clúster, debes tener un balanceador de carga para cada servicio.
* Puede ser costoso tener un balanceador de carga para cada servicio.

En contraste, cuando se utiliza un ingress como punto de entrada a un clúster, el ingress puede dirigir el tráfico a múltiples servicios con mayor flexibilidad. Puede mapear múltiples solicitudes HTTP a servicios sin direcciones IP individuales para cada servicio.

Por lo tanto, es útil tener un ingress si deseas que múltiples servicios estén expuestos con la misma dirección IP, el mismo protocolo de capa 7 o los mismos puertos de nodo privilegiados: 80 y 443.

El ingress funciona en conjunto con uno o más controladores de ingress para dirigir dinámicamente las solicitudes de servicio. Cuando el ingress recibe una solicitud, los controladores de ingress en tu clúster dirigen la solicitud al servicio correcto según los subdominios de servicio o las reglas de vía que hayas configurado.

Tu ingress, que crea un puerto de entrada a tu clúster similar a un balanceador de carga, puede residir dentro de tu clúster o externamente.

El ingress también puede proporcionar otra funcionalidad, como la terminación de SSL, el alojamiento virtual basado en nombres y más.

* Para más información sobre cómo configurar el ingress en Rancher, consulta {xref-add-ingresses}[Ingress].
* Para información completa sobre el ingress y los controladores de ingress, consulta la https://kubernetes.io/docs/concepts/services-networking/ingress/[Documentación de Ingress de Kubernetes]
* Al usar ingress en un proyecto, puedes programar el nombre de host del ingress a un DNS externo configurando una entrada de DNS Global.
